# jadn-python

./: .gitignore  .gitlab-ci.yml  .pylintrc  ReadMe.md  requirements.txt.orig  setup.cfg  setup.py  version.json
jadn/: requirements.txt
jadn/jadnschema/: __init__.py  base.py  cli.py  definitions.py  jadn.py  schema.py  utils.py
jadn/jadnschema/convert/: __init__.py
jadn/jadnschema/convert/schema/: __init__.py  base.py  base_dump.py  enums.py  json_schema.py  markdown.py
jadn/jadnschema/schema/: __init__.py  base.py  definitions.py  exceptions.py  fields.py  options.py  schema.py
jadn/tests/: schema-translators.py
jadn/tests/schema/: oc2ls-v1.0-csprd03-updates.jadn  oc2ls-v1.0-csprd03.jadn  oc2ls-v1.0-wd14_update.jadn
jadnschema/: __init__.py  base.py  cli.py  exceptions.py  jadn.py  utils.py
jadnschema/convert/: __init__.py
jadnschema/convert/message/: __init__.py  message.py
jadnschema/convert/message/serializations/: __init__.py  xml.py
jadnschema/convert/schema/: __init__.py  base.py
jadnschema/schema/: base.py  definitions.py  exceptions.py  fields.py  options.py  schema.py
jadnschema/schema/definitions/: __init__.py  array.py  arrayOf.py  base.py  choice.py  custom.py  enumerated.py  map.py  mapOf.py  record.py
jadnschema/schema/formats/: general.py  jadn_idna.py  network.py  rfc_3339.py  rfc_3986.py  rfc_3987.py
tests/: schema-translators.py  schema-validator.py
tests/schema/: oc2ls-v1.0-csprd03-update.jadn  oc2ls-v1.0-csprd03-update_fix.jadn  oc2ls-v1.0-csprd03.jadn  oc2ls-v1.0-wd14_update.jadn  oc2ls-wd13.jadn  reorg.py
(+17 files in other folders)
