[metadata]
  name = jadnschema
  description = JADN Schema/Message Translator & Validator
  long_description = file: ReadMe.md
  long_description_content_type="text/markdown",
  classifiers =
    Development Status :: 5 - Development/Beta
    Intended Audience :: Developers
    License :: Apache 2.0 License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Security :: Translation :: Validation

[options]
  packages = find:
  python_requires= >=3.6, <4
  setup_requires = setuptools_scm
  install_requires =
    beautifultable>=0.8.0
    lesscpy>=0.13.0
    typeguard>=2.5.0

[options.extras_require]
  format =
    idna>=2.8
    jsonpointer>=2.0
    netaddr>=0.7.19
    strict_rfc3339>=0.7
    rfc3987>=1.3.8
    rfc3986>=1.3.2

[options.entry_points]
  console_scripts =
    jadnschema = jadnschema.cli:main
